[package]
name = "clickgis"
version = "0.1.0"
edition = "2021"
author = ["Nabil Servais me@nabil.dev"]
license = "MIT/Apache-2.0"
description = "ClickGIS is an experiment for adding OpenGIS SQL functions to Clickhouse."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.19", features = ["cargo"]}
geozero = {version = "0.10.0", features = ["with-wkb", "with-wkt", "geojson", "with-geo"] }
hex = "0.4.3"
